# fake-laser-sim

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: start_sim.launch
msg/: Shape.msg
params/: default.yaml
rviz/: default.rviz
scripts/: env_server_node.py  object_spawner.py
src/fake_laser_sim/: __init__.py  conversions.py  scene_object.py  sensors.py
srv/: SpawnShape.srv
test/: main.py
